hamburger menu closes on outside click, and fix text alignment in homepage

--- a/frontend/src/pages/homePage/HomePage.module.css
+++ b/frontend/src/pages/homePage/HomePage.module.css
@@ -69,10 +69,13 @@
   margin: auto 0;
   display: flex;
   flex-direction: column;
+  padding: 20px;
+}
+
+.homePageHeader{
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 20px;
 }
 
 .logo {
